--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clube de Parceiros</title>
+    <title>Clube de Beneficios ProtegeMais</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
     <header class="main-header">
         <div class="logo">
-            <img src="logo.png" alt="Logo Clube de Parceiros">
+            <img src="logoprotegemais.png" alt="logoprotegemais">
         </div>
         <nav class="main-nav">
             <ul>
@@ -64,8 +64,8 @@
             <p>Tem alguma dúvida, sugestão ou quer ser nosso parceiro? Entre em contato conosco!</p>
             <div class="contact-info">
                 <p><strong>Email:</strong> <a href="mailto:contato@clubedeparceiros.com">contato@clubedeparceiros.com</a></p>
-                <p><strong>Telefone:</strong> <a href="tel:+5508001234567">0800 123 4567</a></p>
-                <p><strong>Horário de Atendimento:</strong> Segunda a Sexta, das 9h às 18h.</p>
+                <p><strong>Whatsapp:</strong> <a href="https://w.app/protegemaisbeneficios">(19)99743-2085</a></p>
+                <p><strong>Horário de Atendimento:</strong> Segunda a Sexta, das 9h às 17h.</p>
             </div>
         </section>
     </main>
