--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="main-header">
         <div class="logo">
-            <img src="logoprotegemais.png" alt="logoprotegemais">
+            <img src="imagens/site/logoprotegemais.png" alt="logoprotegemais">
         </div>
         <nav class="main-nav">
             <ul>
