--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     </iframe>
                 </div>
                 <div class="modal-actions">
+                    <div id="modal-social" class="social-links" style="margin-top: 10px; display: flex; gap: 10px;"></div>
                     <a id="modal-route-button" href="#" target="_blank" class="btn btn-primary">Traçar Rota</a>
                     <a id="modal-whatsapp-button" href="#" target="_blank" class="btn btn-secondary">WhatsApp</a>
                 </div>
