--- a/index.html
+++ b/index.html
@@ -65,15 +65,16 @@
         <section id="sobre" class="section-container">
             <h2>Sobre Nós</h2>
             <p>Bem-vindo ao Clube de Parceiros, a sua plataforma exclusiva de vantagens e descontos! Nossa missão é conectar você aos melhores estabelecimentos da sua cidade, oferecendo benefícios incríveis e experiências únicas.</p>
-            <p>Nascemos do desejo de fortalecer o comércio local e, ao mesmo tempo, proporcionar economia e praticidade para nossos membros. Cada parceiro em nossa rede é cuidadosamente selecionado para garantir qualidade, confiança e o melhor atendimento. Explore, descubra e aproveite tudo o que o Clube de Parceiros tem a oferecer!</p>
+            <p>Nascemos do desejo de fortalecer o comércio local e, ao mesmo tempo, proporcionar economia e praticidade para nossos Associados. Cada parceiro em nossa rede é cuidadosamente selecionado para garantir qualidade, confiança e o melhor atendimento. Explore, descubra e aproveite tudo o que o Clube de Parceiros da ProtegeMais tem a oferecer!</p>
         </section>
 
         <section id="contato" class="section-container">
             <h2>Contato</h2>
             <p>Tem alguma dúvida, sugestão ou quer ser nosso parceiro? Entre em contato conosco!</p>
             <div class="contact-info">
-                <p><strong>Email:</strong> <a href="mailto:contato@clubedeparceiros.com">contato@clubedeparceiros.com</a></p>
-                <p><strong>Whatsapp:</strong> <a href="https://w.app/protegemaisbeneficios">(19)99743-2085</a></p>
+                <p><strong>Email:</strong> <a href="mailto:adm@protegemais.club">adm@protegemais.club</a></p>
+                <p><strong>Whatsapp:</strong> <a href="https://w.app/protegemaisbeneficios">(19)98315-6408</a></p>
+                p><strong>Canal 0800:</strong> 0800-989-8070 </p>
                 <p><strong>Horário de Atendimento:</strong> Segunda a Sexta, das 9h às 17h.</p>
             </div>
         </section>
