--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
                 <p><strong>Email:</strong> <a href="mailto:adm@protegemais.club">adm@protegemais.club</a></p>
                 <p><strong>Whatsapp:</strong> <a href="https://w.app/protegemaisbeneficios">(19)98315-6408</a></p>
-                p><strong>Canal 0800:</strong> 0800-989-8070 </p>
+                <p><strong>Canal 0800:</strong> 0800-989-8070 </p>
                 <p><strong>Horário de Atendimento:</strong> Segunda a Sexta, das 9h às 17h.</p>
             </div>
         </section>
