--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    
+<!-- Vídeo de abertura -->
+<div id="intro">
+    <button id="closeBtn">✖</button>
+    <video autoplay muted playsinline id="videoIntro">
+        <source src="imagem/site/protege .mp4" type="video/mp4">
+        Seu navegador não suporta vídeo.
+    </video>
+</div>
+    
     <header class="main-header">
     <div class="logo">
         <img src="imagens/site/logoprotegemais.png" alt="logoprotegemais">
