--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="intro">
     <button id="closeBtn">✖</button>
     <video autoplay muted playsinline id="videoIntro">
-        <source src="imagem/site/protege .mp4" type="video/mp4">
+        <source src="imagens/site/protege.mp4" type="video/mp4">
         Seu navegador não suporta vídeo.
     </video>
 </div>
