--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="intro">
     <button id="closeBtn">✖</button>
     <video autoplay muted playsinline id="videoIntro">
-        <source src="imagem/site/protege .mp4" type="video/mp4">
+        <source src="imagens/site/protege.mp4" type="video/mp4">
         Seu navegador não suporta vídeo.
     </video>
     <button id="audioBtn" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);
