--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 <div id="intro">
     <button id="closeBtn">✖</button>
     <video autoplay muted playsinline id="videoIntro">
-        <source src="imagens/site/protege.mp4" type="video/mp4">
+        <source src="imagens/site/protege.mp4" type="video/mp4" />
         Seu navegador não suporta vídeo.
     </video>
-    <button id="audioBtn" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);
-        padding: 10px 20px; font-size: 16px; border-radius: 8px; border: none; cursor: pointer; background-color: var(--primary-color); color: white; box-shadow: var(--box-shadow);">
+    <button id="audioBtn">
         Clique para ouvir
     </button>
-</div>
+</div
     
     <header class="main-header">
     <div class="logo">
